[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego/enemigos/Pinchon.gd" type="Script" id=1]
[ext_resource path="res://recursos/Enemies/spikeMan_walk2.png" type="Texture" id=2]
[ext_resource path="res://recursos/Enemies/spikeMan_walk1.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 2.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0

[node name="Pinchon" type="KinematicBody2D"]
z_index = 35
z_as_relative = false
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -39 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "caminar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -2.5 )
shape = SubResource( 2 )

[node name="DetectorVacio" type="RayCast2D" parent="."]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
position = Vector2( 36, 0 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="DetectorPared" type="RayCast2D" parent="."]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
position = Vector2( 27, -25 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="DetectorJugador" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -27 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorJugador"]
modulate = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -11, -49, 11, -49, 6, -53, 0, -75, -6, -53 )

[connection signal="body_entered" from="DetectorJugador" to="." method="_on_body_entered"]
